Improved registration time by using parallel execution + fixed the tests